--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -260,7 +260,7 @@ jobs:
             python -m nuitka --standalone --enable-plugin=pyqt6 --include-data-dir=src/assets=assets --windows-icon-from-ico=src/assets/images/icon.ico --output-dir=dist --assume-yes-for-downloads src/main.py
             
             # 创建Inno Setup脚本
-            cat > installer.iss << EOF
+            powershell -Command "Set-Content -Path installer.iss -Value @'
 [Setup]
 AppName=GestroKey
 AppVersion=${{ needs.get-version.outputs.version }}
@@ -271,12 +271,12 @@ OutputDir=dist
 OutputBaseFilename=GestroKey-${{ needs.get-version.outputs.version }}-Windows-Setup
 
 [Files]
-Source: "dist\main.dist\*"; DestDir: "{app}"; Flags: recursesubdirs
+Source: \"dist\main.dist\*\"; DestDir: \"{app}\"; Flags: recursesubdirs
 
 [Icons]
-Name: "{group}\GestroKey"; Filename: "{app}\main.exe"
-Name: "{commondesktop}\GestroKey"; Filename: "{app}\main.exe"
-EOF
+Name: \"{group}\GestroKey\"; Filename: \"{app}\main.exe\"
+Name: \"{commondesktop}\GestroKey\"; Filename: \"{app}\main.exe\"
+'@"
             
             # 编译安装包
             "C:\Program Files (x86)\Inno Setup 6\ISCC.exe" installer.iss
