--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -114,7 +114,7 @@ jobs:
       fail-fast: false
       matrix:
         os: [windows-latest, ubuntu-latest, macos-latest]
-        package-type: [installer, standalone, portable]
+        package-type: [standalone, portable]
     
     steps:
       - name: 检出代码
@@ -131,20 +131,18 @@ jobs:
           python -m pip install --upgrade pip
           pip install nuitka
           pip install -r requirements.txt
-
+          
       # Windows特定安装
       - name: Windows - 安装工具
         if: matrix.os == 'windows-latest'
         run: |
           choco install imagemagick -y
-          choco install innosetup -y
 
       # macOS特定安装
       - name: macOS - 安装工具
         if: matrix.os == 'macos-latest'
         run: |
           brew install imagemagick
-          brew install create-dmg
 
       # Linux特定安装
       - name: Linux - 安装工具
@@ -161,14 +159,14 @@ jobs:
             mkdir -p src/assets/images
           }
           if (Test-Path -Path src/assets/images/icon.svg) {
-            magick src/assets/images/icon.svg -background none -resize 256x256 icon-256.png
-            magick src/assets/images/icon.svg -background none -resize 128x128 icon-128.png
-            magick src/assets/images/icon.svg -background none -resize 64x64 icon-64.png
-            magick src/assets/images/icon.svg -background none -resize 48x48 icon-48.png
-            magick src/assets/images/icon.svg -background none -resize 32x32 icon-32.png
-            magick src/assets/images/icon.svg -background none -resize 16x16 icon-16.png
-            magick icon-256.png icon-128.png icon-64.png icon-48.png icon-32.png icon-16.png src/assets/images/icon.ico
-            Remove-Item icon-*.png
+          magick src/assets/images/icon.svg -background none -resize 256x256 icon-256.png
+          magick src/assets/images/icon.svg -background none -resize 128x128 icon-128.png
+          magick src/assets/images/icon.svg -background none -resize 64x64 icon-64.png
+          magick src/assets/images/icon.svg -background none -resize 48x48 icon-48.png
+          magick src/assets/images/icon.svg -background none -resize 32x32 icon-32.png
+          magick src/assets/images/icon.svg -background none -resize 16x16 icon-16.png
+          magick icon-256.png icon-128.png icon-64.png icon-48.png icon-32.png icon-16.png src/assets/images/icon.ico
+          Remove-Item icon-*.png
           } else {
             Write-Error "缺少图标文件: src/assets/images/icon.svg"
             exit 1
@@ -251,97 +249,6 @@ jobs:
             chmod +x "dist/GestroKey-${{ needs.get-version.outputs.version }}-macOS-Standalone"
           fi
 
-      # 构建安装包
-      - name: 构建安装包
-        if: matrix.package-type == 'installer'
-        run: |
-          if [ "${{ matrix.os }}" = "windows-latest" ]; then
-            # Windows安装包 (Inno Setup)
-            python -m nuitka --standalone --enable-plugin=pyqt6 --include-data-dir=src/assets=assets --windows-icon-from-ico=src/assets/images/icon.ico --output-dir=dist --assume-yes-for-downloads src/main.py
-            
-            # 创建Inno Setup脚本
-            powershell -Command "Set-Content -Path installer.iss -Value @'
-[Setup]
-AppName=GestroKey
-AppVersion=${{ needs.get-version.outputs.version }}
-DefaultDirName={pf}\GestroKey
-DefaultGroupName=GestroKey
-UninstallDisplayIcon={app}\main.exe
-OutputDir=dist
-OutputBaseFilename=GestroKey-${{ needs.get-version.outputs.version }}-Windows-Setup
-
-[Files]
-Source: \"dist\main.dist\*\"; DestDir: \"{app}\"; Flags: recursesubdirs
-
-[Icons]
-Name: \"{group}\GestroKey\"; Filename: \"{app}\main.exe\"
-Name: \"{commondesktop}\GestroKey\"; Filename: \"{app}\main.exe\"
-'@"
-            
-            # 编译安装包
-            "C:\Program Files (x86)\Inno Setup 6\ISCC.exe" installer.iss
-            
-          elif [ "${{ matrix.os }}" = "ubuntu-latest" ]; then
-            # Linux安装包 (DEB)
-            python -m nuitka --standalone --enable-plugin=pyqt6 --include-data-dir=src/assets=assets --output-dir=dist --assume-yes-for-downloads src/main.py
-            
-            # 创建DEB包结构
-            mkdir -p dist/deb-package/DEBIAN
-            mkdir -p dist/deb-package/usr/local/bin/gestrokey
-            mkdir -p dist/deb-package/usr/share/applications
-            mkdir -p dist/deb-package/usr/share/icons/hicolor/256x256/apps
-            
-            # 复制文件
-            cp -r dist/main.dist/* dist/deb-package/usr/local/bin/gestrokey/
-            cp src/assets/images/icon.png dist/deb-package/usr/share/icons/hicolor/256x256/apps/gestrokey.png
-            
-            # 创建启动器 - 修复heredoc
-            cat > dist/deb-package/usr/share/applications/gestrokey.desktop << EOF
-[Desktop Entry]
-Type=Application
-Name=GestroKey
-Comment=鼠标手势控制工具
-Exec=/usr/local/bin/gestrokey/main
-Icon=gestrokey
-Categories=Utility;
-EOF
-            
-            # 创建控制文件 - 修复heredoc
-            cat > dist/deb-package/DEBIAN/control << EOF
-Package: gestrokey
-Version: ${{ needs.get-version.outputs.version }}
-Section: utils
-Priority: optional
-Architecture: amd64
-Maintainer: GestroKey Team
-Description: 鼠标手势控制工具
- GestroKey允许用户通过鼠标绘制来执行各种操作
-EOF
-            
-            # 构建DEB包
-            fakeroot dpkg-deb --build dist/deb-package "dist/GestroKey-${{ needs.get-version.outputs.version }}-Linux-Setup.deb"
-            
-          else
-            # macOS安装包 (DMG)
-            python -m nuitka --standalone --enable-plugin=pyqt6 --include-data-dir=src/assets=assets --macos-create-app-bundle --macos-app-icon=src/assets/images/icon.icns --output-dir=dist --assume-yes-for-downloads src/main.py
-            
-            # 重命名应用
-            mv dist/main.app "dist/GestroKey.app"
-            
-            # 创建DMG - 修复命令格式
-            create-dmg \
-              --volname "GestroKey" \
-              --volicon "src/assets/images/icon.icns" \
-              --window-pos 200 120 \
-              --window-size 800 400 \
-              --icon-size 100 \
-              --icon "GestroKey.app" 200 190 \
-              --hide-extension "GestroKey.app" \
-              --app-drop-link 600 185 \
-              "dist/GestroKey-${{ needs.get-version.outputs.version }}-macOS-Setup.dmg" \
-              "dist/GestroKey.app"
-          fi
-
       # 上传构建产物
       - name: 上传构建产物
         uses: actions/upload-artifact@v4
@@ -351,7 +258,6 @@ EOF
             dist/GestroKey-*.exe
             dist/GestroKey-*.zip
             dist/GestroKey-*.dmg
-            dist/GestroKey-*.deb
             dist/GestroKey-*.tar.gz
             dist/GestroKey-*-Standalone
             dist/GestroKey-*-Standalone.exe
@@ -383,11 +289,11 @@ EOF
 
 ## 下载链接
 
-| 操作系统 | 安装包 | 单文件版 | 便携版 |
-|---------|--------|---------|-------|
-| Windows | [安装程序](${{ needs.get-version.outputs.repo_url }}/releases/download/${{ needs.get-version.outputs.release_name }}/GestroKey-${{ needs.get-version.outputs.version }}-Windows-Setup.exe) | [独立可执行文件](${{ needs.get-version.outputs.repo_url }}/releases/download/${{ needs.get-version.outputs.release_name }}/GestroKey-${{ needs.get-version.outputs.version }}-Windows-Standalone.exe) | [ZIP压缩包](${{ needs.get-version.outputs.repo_url }}/releases/download/${{ needs.get-version.outputs.release_name }}/GestroKey-${{ needs.get-version.outputs.version }}-Windows-Portable.zip) |
-| macOS   | [DMG安装镜像](${{ needs.get-version.outputs.repo_url }}/releases/download/${{ needs.get-version.outputs.release_name }}/GestroKey-${{ needs.get-version.outputs.version }}-macOS-Setup.dmg) | [独立可执行文件](${{ needs.get-version.outputs.repo_url }}/releases/download/${{ needs.get-version.outputs.release_name }}/GestroKey-${{ needs.get-version.outputs.version }}-macOS-Standalone) | [ZIP压缩包](${{ needs.get-version.outputs.repo_url }}/releases/download/${{ needs.get-version.outputs.release_name }}/GestroKey-${{ needs.get-version.outputs.version }}-macOS-Portable.zip) |
-| Linux   | [DEB安装包](${{ needs.get-version.outputs.repo_url }}/releases/download/${{ needs.get-version.outputs.release_name }}/GestroKey-${{ needs.get-version.outputs.version }}-Linux-Setup.deb) | [独立可执行文件](${{ needs.get-version.outputs.repo_url }}/releases/download/${{ needs.get-version.outputs.release_name }}/GestroKey-${{ needs.get-version.outputs.version }}-Linux-Standalone) | [TAR.GZ压缩包](${{ needs.get-version.outputs.repo_url }}/releases/download/${{ needs.get-version.outputs.release_name }}/GestroKey-${{ needs.get-version.outputs.version }}-Linux-Portable.tar.gz) |
+| 操作系统 | 单文件版 | 便携版 |
+|---------|---------|-------|
+| Windows | [独立可执行文件](${{ needs.get-version.outputs.repo_url }}/releases/download/${{ needs.get-version.outputs.release_name }}/GestroKey-${{ needs.get-version.outputs.version }}-Windows-Standalone.exe) | [ZIP压缩包](${{ needs.get-version.outputs.repo_url }}/releases/download/${{ needs.get-version.outputs.release_name }}/GestroKey-${{ needs.get-version.outputs.version }}-Windows-Portable.zip) |
+| macOS   | [独立可执行文件](${{ needs.get-version.outputs.repo_url }}/releases/download/${{ needs.get-version.outputs.release_name }}/GestroKey-${{ needs.get-version.outputs.version }}-macOS-Standalone) | [ZIP压缩包](${{ needs.get-version.outputs.repo_url }}/releases/download/${{ needs.get-version.outputs.release_name }}/GestroKey-${{ needs.get-version.outputs.version }}-macOS-Portable.zip) |
+| Linux   | [独立可执行文件](${{ needs.get-version.outputs.repo_url }}/releases/download/${{ needs.get-version.outputs.release_name }}/GestroKey-${{ needs.get-version.outputs.version }}-Linux-Standalone) | [TAR.GZ压缩包](${{ needs.get-version.outputs.repo_url }}/releases/download/${{ needs.get-version.outputs.release_name }}/GestroKey-${{ needs.get-version.outputs.version }}-Linux-Portable.tar.gz) |
 
 ## 系统要求
 
